--- a/Sentiment Analysis_CCTV.ipynb
+++ b/Sentiment Analysis_CCTV.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a2988931-7228-45cd-ba57-2a070df33a9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\Shagufta\\OneDrive\\Documents\\Data Analyst\\Power BI\\Dashboard\\CCTV\\cctv_ecommerce_dataset.csv\")"
+    "df = pd.read_csv(r\"cctv_ecommerce_dataset.csv\")"
    ]
   },
   {
